--- a/frontapi/src/game/game.css
+++ b/frontapi/src/game/game.css
@@ -23,14 +23,11 @@
 	border: blue 1px solid;
 }
 
-#game canvas
+#gameScore
 {
-	position: relative;
-	width: 100%;
-	height: 100%;
-
-	border: yellow 1px solid;
+	color: #fff;
 }
+
 
 @media only screen and ( min-width: 1220px )
 {
