added chat template

--- a/frontapi/src/leaderboard/leaderboard.css
+++ b/frontapi/src/leaderboard/leaderboard.css
@@ -46,15 +46,15 @@
 #leaderboard th:nth-child(1)
 {
 	border: 1px solid var( --cNeon);
-	border-top-left-radius: 3px;
-	border-bottom-left-radius: 3px;
+	border-top-left-radius: 2px;
+	border-bottom-left-radius: 2px;
 }
 
 #leaderboard th:nth-child(3)
 {
 	border: 1px solid var( --cNeon);
-	border-top-right-radius: 3px;
-	border-bottom-right-radius: 3px;
+	border-top-right-radius: 2px;
+	border-bottom-right-radius: 2px;
 }
 
 #leaderboard td
@@ -64,9 +64,27 @@
 	padding: 0.4rem 0rem;
 }
 
-#leaderboard tr:nth-child(odd) td
+#leaderboard tr:nth-child(odd) td:nth-child(2)
 {
 	border: 1px dashed var( --cNeon );
+}
+
+#leaderboard tr:nth-child(odd) td:nth-child(1)
+{
+	border-top: 1px dashed var( --cNeon );
+	border-left: 1px dashed var( --cNeon );
+	border-bottom: 1px dashed var( --cNeon );
+	border-top-left-radius: 1px;
+	border-bottom-left-radius: 1px;
+}
+
+#leaderboard tr:nth-child(odd) td:nth-child(3)
+{
+	border-top: 1px dashed var( --cNeon );
+	border-right: 1px dashed var( --cNeon );
+	border-bottom: 1px dashed var( --cNeon );
+	border-top-right-radius: 1px;
+	border-bottom-right-radius: 1px;
 }
 
 @media only screen and ( min-width: 1220px )
