--- a/frontapi/src/chat/chat.css
+++ b/frontapi/src/chat/chat.css
@@ -17,7 +17,41 @@
 {
 	width: 25vw;
 	height: 70vh;
-	border: 1px solid var( --cNeonLight );
+	border: 1px solid var( --cNeon );
+	border-radius: 1px;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+#friends li
+{
+	color: var( --cNeonLight );
+	font-family: Skwar;
+	font-weight: 250;
+	margin-bottom: 0.5em;
+	cursor: pointer;
+	list-style: none;
+}
+
+#friends li::before
+{
+	content: "\2022";
+	font-weight: bold;
+	display: inline-block;
+	width: 1em;
+	margin-left: -1em;
+}
+
+#friends li:nth-child(1)::before
+{
+	color: red;
+}
+
+#friends li:nth-child(2)::before
+{
+	color: orange;
 }
 
 #chatParent
@@ -33,14 +67,115 @@
 {
 	width: 100%;
 	height: 90%;
-	border: 1px solid var( --cNeonLight );
+	padding: 0.7em;
+	border: var( --cNeon ) 0.1em solid;
+	border-radius: 0.125em;
+	box-shadow:
+		inset 0 0 0.6em var( --cNeonLight ),
+		0 0 0.5em var( --cNeonLight );
+
+	display: flex;
+	flex-direction: column;
+/*	align-items: flex-start;*/
+	justify-content: space-between;
+}
+
+#chat .messages
+{
+	margin-bottom: -0.6em;
+}
+
+#chat .sender
+{
+	color: var( --cNeonLight );
+	margin-right: 1em;
+
+	font-family: Skwar;
+	font-weight: 250;
+	font-size: 0.9em;
+}
+
+#chat .body
+{
+	color: var( --cNeon );
+	font-family: sans-serif;
+	font-size: 1em;
+}
+
+#chat form
+{
+	display: flex;
+	flex-direction: horizontal;
+	justify-content: space-between;
+}
+
+#chat form input:nth-child(1)
+{
+	background-color: var( --cBackground );
+	color: var( --cNeonLight );
+	width: 80%;
+	height: 30px;
+	padding: 0.4em;
+	border-radius: 2px;
+	border: 1px solid var( --cNeon );
+	font-family: sans-serif;
+}
+
+#chat form input:nth-child(2)
+{
+	cursor: pointer;
+	background-color: var( --cBackground );
+	color: var( --cNeonLight );
+	width: 15%;
+	border: 2px solid var( --cNeon );
+	font-family: Skwar;
+}
+
+#chat form input:nth-child(2):hover
+{
+	background-color: var( --cNeon );
+	color: var( --cBackground );
 }
 
 #channels
 {
 	width: 25vw;
 	height: 70vh;
-	border: 1px solid var( --cNeonLight );
+	border: 1px solid var( --cNeon );
+	border-radius: 1px;
+	cursor: pointer;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+#channels li
+{
+	color: var( --cNeonLight );
+	font-family: Skwar;
+	font-weight: 250;
+	margin-bottom: 0.5em;
+	list-style-type: square;
+}
+
+#friends li:hover, #channels li:hover
+{
+	color: var( --cBackground );
+	background-color: var( --cNeon );
+}
+
+
+h1
+{
+	font-family: Skwar;
+	font-weight: 300;
+	color: var( --cNeon );
+	border: 1px dashed var( --cNeon );
+	border-radius: 0.125em;
+
+	align-self: center;
+	padding: 0.7rem 0.7rem;
 }
 
 @media only screen and ( min-width: 1220px )
