--- a/frontapi/src/header/header.css
+++ b/frontapi/src/header/header.css
@@ -49,7 +49,7 @@ header
 	font-size: 2em;
 	font-family: Skwar;
 	font-weight: 200;
-	color: var( --cNeon );
+	color: var( --cNeonLight );
 
 	/*
 	border: yellow 1px solid;
