--- a/frontapi/src/components/chat/chat.css
+++ b/frontapi/src/components/chat/chat.css
@@ -25,7 +25,7 @@
 
 #friends
 {
-	height: 48%;
+	height: 60%;
 	border: 1px solid var( --cNeon );
 	border-radius: 1px;
 
@@ -70,13 +70,18 @@
 
 #members
 {
-	height: 48%;
+	height: 35%;
 	border: 1px solid var( --cNeon );
 	border-radius: 1px;
 
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
+}
+
+#members li
+{
+	margin-bottom: -0.125em;
 }
 
 #chatParent
@@ -168,7 +173,6 @@
 	height: 70vh;
 	border: 1px solid var( --cNeon );
 	border-radius: 1px;
-	cursor: pointer;
 
 	display: flex;
 	flex-direction: column;
@@ -182,6 +186,7 @@
 	font-weight: 250;
 	margin-bottom: 0.5em;
 	list-style-type: square;
+	cursor: pointer;
 }
 
 #friends li:hover, #members li:hover, #channels li:hover
