--- a/frontapi/src/components/header/header.css
+++ b/frontapi/src/components/header/header.css
@@ -41,7 +41,7 @@ header
 	*/
 }
 
-#P, #O, #N, #G
+#P, #O, #N, #G, #under
 {
 	position: relative;
 	display: inline-block;
@@ -55,6 +55,23 @@ header
 	border: yellow 1px solid;
 	*/
 }
+
+#under {
+	animation: blink-animation 1s steps(2, start) infinite;
+	-webkit-animation: blink-animation 1s steps(2, start) infinite;
+}
+
+@keyframes blink-animation {
+	to {
+		visibility: hidden;
+	}
+}
+@-webkit-keyframes blink-animation {
+	to {
+		visibility: hidden;
+	}
+}
+
 
 #logo:hover #P
 {
