--- a/frontapi/src/components/game/game.css
+++ b/frontapi/src/components/game/game.css
@@ -78,6 +78,13 @@
 
 #btnCtrl {
 	margin: 1em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#btnCtrl Button {
+	margin: 0.3em;
 }
 
 
@@ -87,7 +94,7 @@
 		margin-top: 30px;
 
 		flex-direction: column;
-		justify-content: space-around;
+		align-items: center;
 	}
 
 	#game {
