--- a/frontapi/src/components/game/game.css
+++ b/frontapi/src/components/game/game.css
@@ -4,7 +4,7 @@
 {
 	position: absolute;
 	left: 0;
-	margin-top: 120px;
+	margin-top:120px;
 	width: 100vw;
 
 	display: flex;
@@ -15,18 +15,17 @@
 #game
 {
 	position: relative;
-	width: 90vw;
-	height: 45vw;
+	width: 80vw;
 
 	border: var( --cNeon ) 0.1em solid;
 	box-shadow: 0 0 0.5em var( --cNeonDark );
-	
+
 }
 
 #gameScore
 {
 	position: relative;
-	width: 90vw;
+	width: 70vw;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -38,21 +37,54 @@
 }
 
 #playerLeft{
+	width:50%;
 	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	margin-right:auto;
+	flex-direction: row;
+	justify-content: space-between;
 }
 
 #playerRight{
+	width:50%;
 	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-	margin-left:auto;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+#playerLeftName{
+	align-self: flex-start;
+	margin-top: auto;
+}
+
+#playerRightName{
+	align-self: flex-end;
+	margin-top: auto;
+}
+
+#playerLeftScore{
+	align-self: flex-end;
+	margin-right: 2em;
+}
+
+#playerRightScore{
+	align-self: flex-start;
+	margin-left: 2em;
+}
+
+#vs {
+	color: var( --cNeonDark );
+	font-size: 0.8em;
+	font-weight: 450;
 }
 
 #btnCtrl {
 	margin: 1em;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+#btnCtrl Button {
+	margin: 0.3em;
 }
 
 
@@ -62,12 +94,11 @@
 		margin-top: 30px;
 
 		flex-direction: column;
-		justify-content: space-around;
+		align-items: center;
 	}
 
 	#game {
-		width: 60vw;
-		height: 30vw;
+		width: 70vw;
 	}
 
 	#gameScore {
