--- a/frontapi/src/components/chat/chat.css
+++ b/frontapi/src/components/chat/chat.css
@@ -1,232 +1,395 @@
 @import '../../globals.css';
 
-#chatSection
+
+/* Message */
+
+#chat-section
 {
 	position: absolute;
 	left: 0;
+
 	width: 80%;
+	height:70%;
+
 	margin-top: 120px;
 	margin-left:10%;
 	margin-right:10%;
 
 	display: flex;
-	flex-direction: horizontal;
-	justify-content: space-between;
-
+	flex-direction: row;
+	justify-content: center;
 }
 
-#users
-{
-	width: 25vw;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-
-#friends
-{
-	padding-top:5%;
-	padding-bottom:5%;
-	padding-left:10%;
-	padding-right:10%;
-	border-radius: 1px;
-	height: 50%;
-	width:80%;
-
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-}
-
-
-#friends li, #members li
-{
+#chat-section {
 	color: var( --cNeon );
+
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
 	font-weight: 350;
-	margin-bottom: 0.5em;
-	cursor: pointer;
-	list-style: none;
-	font-size:0.8em;
-	width:90%;
 }
 
-#friends li::before, #members li::before
-{
-	content: "\2022";
-	display: inline-block;
-	width: 1em;
-	margin-left: -1em;
+#chat-rooms {
+	position: absolute;
+	top:1em;
+	left: -2.8em;
+
+	overflow:hidden;
+
+	background: var(--cBackground);
+
+	width:2em;
+	height:2em;
+	max-width:20em;
+	max-height: calc(100% - 2em);
+
+	border: 1px solid var(--cNeon);
+	border-radius: 1em;
+
+	transition: width 1s , height 1s, border-radius 1s, background 1s ease;
 }
 
-.away::before
-{
-	color: red;
+#chat-rooms:hover {
+	background: var(--cBackground);
+
+	height:100%;
+	width: 50%;
+
+	border-radius: 0em;
 }
 
-.playing::before
-{
-	color: orange;
+
+#chat-rooms .chat-block {
+	opacity:0%;
+
+	transition: display 1s, opacity 0.5s;
 }
 
-.connected::before
-{
-	color: var( --cNeon );
+#chat-rooms:hover > .chat-block {
+	right: 0%;
+
+	opacity:100%;
 }
 
-#members
-{
+#chat-users {
+	position: absolute;
+	top:1em;
+	right: -2.8em;
+
+	overflow:hidden;
+
+	background: var(--cBackground);
+
+	width:2em;
+	max-width:20em;
+	height:2em;
+	max-height: calc(100% - 2em);
+
+	border: 1px solid var(--cNeon);
+	border-radius: 1em;
+
+	transition: width 1s , height 1s, border-radius 1s, background 1s ease;
+}
+
+#chat-users:hover {
+	background: var(--cBackground);
+
+	height:100%;
+	width: 50%;
+
+	border-radius: 0em;
+}
+
+
+#chat-users .chat-block {
+	opacity:0%;
+
+	transition: display 1s, opacity 0.5s;
+}
+
+#chat-users:hover > .chat-block {
+	right: 0%;
+
+	opacity:100%;
+}
+
+.chat-block {
 	padding-top:5%;
 	padding-bottom:5%;
 	padding-left:10%;
 	padding-right:10%;
-	height: 50%;
-	border-radius: 1px;
 
 	display: flex;
 	flex-direction: column;
-	align-items: flex-start;
+
+	height:95%;
+
+}
+
+#chat-rooms #chat-joined-rooms {
+	max-height:70%;
+
+}
+
+#chat-rooms #chat-private-rooms {
+	max-height:20%;
+}
+
+#chat-users .chat-block {
+	max-height:45%;
+
+	overflow-wrap: nowrap !important;
+}
+
+.chat-title {
+	font-family: SkwarLetter;
+	font-size:1.5em;
+	font-weight: 450;
+
+	color: var( --cNeonLight );
+
+	align-self: center;
+
+	margin-bottom: 10%;
+}
+
+.chat-list {
+	color: var( --cNeon );
+
+	overflow-wrap: anywhere;
+	overflow-y:scroll;
+
+	align-self: flex-start;
+
 	width:80%;
+	height:100%;
+
+	font-family: SkwarLetter;
+	line-height: 1.7;
+	font-size:0.8em;
+
+	padding-bottom: 1.8em;
+	padding-left:20%;
+	padding-right:20%;
+
 }
 
-
-
-#chatParent
-{
-	width: 45vw;
-	height: 70vh;
-	display: flex;
-	flex-direction: horizontal;
-	align-items: center;
-}
-
-#chat
-{
-	width: 100%;
-	height: 100%;
-
+#chat-content {
 	display: flex;
 	flex-direction: column;
-/*	align-items: flex-start;*/
-	justify-content: space-between;
-	border: 1px solid rgba(89, 168, 15, 0.8); 
+
+	width:100%;
+	height:100%;
+
+	border: 1px solid var(--cNeon80); 
 }
 
-#messages
-{
-	height: 93%;
+#chat-messages {
+	display: flex;
+	flex-direction: column;
+
 	overflow-y: scroll;
-	display: flex;
-	flex-direction: column;
-/*	align-items: flex-start;*/
+
 	padding-left:1.5em;
 	padding-right:1.5em;
 	padding-bottom:1em;
-	
+
+	height: 93%;
 }
 
-/* scrollbar Firefox */
-#messages {
-	scrollbar-color: rgba(89, 168, 15, 0.5) var(--cBackground);
+#chat-form {
+	display: flex;
+	flex-direction: horizontal;
+	justify-content: space-between;
+
+	height: 7%;
+
+	border-top: 1px solid var(--cNeon80);
+	box-shadow: 0 -1.3em 1em -0.5em var( --cBackground );
 }
 
-/* scrollbar Chrome */
- /* width */
-#messages::-webkit-scrollbar {
-  width: 0.3em;
+#chat-form-input {
+	color: var( --cNeonLight );
+	background-color: var( --cBackground );
+
+	padding-left: 2em;
+	padding-right: 2em;
+
+	width: 85%;
+
+	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+	font-size: 0.8em;
+	font-weight:700;
+	letter-spacing: 0.2em;
+	line-height: 1.8;
+
+	border:none;
+	outline:none;
 }
 
-/* Track */
-#messages::-webkit-scrollbar-track {
-	background: var(--cBackground);
+#chat-form-submit
+{
+	color: var( --cNeon );
+	background-color: var( --cBackground );
+
+	cursor: pointer;
+
+	width: 15%;
+
+	border:none;
+	border-left: 1px solid var( --cNeon );
+
+	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
 }
 
-/* Handle */
-#messages::-webkit-scrollbar-thumb {
-	background: rgba(89, 168, 15, 0.5);
+#chat-form-submit:hover
+{
+	color: var( --cBackground );
+	background-color: var(--cNeon80);
 }
 
-/* Handle on hover */
-#messages::-webkit-scrollbar-thumb:hover {
-	background: rgba(89, 168, 15, 0.3);
-}
-/* end scrollbar */
+/* Message 1220px */
+@media only screen and ( min-width: 1220px )
+{
+	#chat-users {
+		position: static;
 
-.messages
+		background: var(--cBackground);
+
+		width:25%;
+		height:100%;
+		max-height:100%;
+
+		border: none;
+		border-radius: 0em;
+
+		transition: none;
+	}
+
+	#chat-users:hover {
+		height:100%;
+		width: 25%;
+
+		border-radius: 0em;
+	}
+
+
+	#chat-users .chat-block {
+		opacity:100%;
+
+		transition: none;
+	}
+
+	#chat-users:hover > .chat-block {
+		opacity:100%;
+	}
+
+	#chat-rooms {
+		position: static;
+
+		background: var(--cBackground);
+
+		width:25%;
+		height:100%;
+		max-height: 100%;
+
+		border: none;
+		border-radius: none;
+
+		transition: none;
+	}
+
+	#chat-rooms:hover {
+		background: var(--cBackground);
+
+		height:100%;
+		width: 25%;
+
+		border-radius: 0em;
+	}
+
+
+	#chat-rooms .chat-block {
+		opacity: 100%;
+
+		transition: none; 
+	}
+
+	#chat-rooms:hover > .chat-block {
+		opacity:100%;
+	}
+
+}
+
+
+
+
+/* Message */
+
+.msg
 {
 	margin-bottom: 0.5em;
+
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+
 	display: flex;
 	flex-direction: column;
+
 	max-width:80%;
+
+	overflow-wrap:break-word;
 }
 
-#messages .me {
+.msg-me, .msg-me .msg-sender {
 	align-self: flex-end;
 }
 
-.messages .sender {
-	align-self: flex-end;
-	padding-bottom:0.4em;
-}
-
-.body {
-	display:block;
-	max-width:80%;
-	min-width:10.01em;
-	word-break:break-word;
-	white-space:normal;
-}
-
-.me .body {
-	align-self: flex-end;
-	background-color: rgba(89, 168, 15, 0.2);
-	border: 1px solid rgba(89, 168, 15, 0);
-
-}
-
-.other .body {
-	border: 1px solid rgba(89, 168, 15, 0.5);
-}
-
-#messages .other {
-	align-self: flex-start;
-}
-#messages .other .sender {
+.msg-them, .msg-them .msg-sender {
 	align-self: flex-start;
 }
 
-
-
-
-#chat .sender
+.msg-sender
 {
-	margin-right: 1em;
 	color: var( --cNeonLight );
+
+	padding-bottom:0.1em;
+	margin-right: 1em;
 
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
 	font-weight:850;
-	font-size: 0.4em;
+	font-size: 0.5em;
 }
 
-#chat .body
+.msg-body
 {
 	display:block;
+
 	color: var( --cNeon );
+
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
 	font-size: 0.6em;
+	font-weight:600;
 	letter-spacing: 0.2em;
 	line-height: 1.8;
-	font-weight:700;
+
 	padding:0.6em;
 }
 
-#chat .date {
+.msg-me .msg-body {
+	background-color: var(--cNeon20);
+
+	border: 1px solid var(--cNeon20);
+}
+
+.msg-them .msg-body {
+	border: 1px solid var(--cNeon20);
+}
+
+.msg-date {
 	display:block;
+
+	color: var(--cNeon50);
+
 	margin-right: 1em;
 	margin-top: 2em;
-	color: rgba(89, 168, 15, 0.5);
 	padding-bottom:1em;
 
 	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
@@ -234,116 +397,31 @@
 	font-size: 0.7em;
 }
 
-.me .date {
+.msg-me .msg-date {
 	text-align: left;
 }
-.other .date {
+.msg-them .msg-date {
 	text-align: right;
 }
 
-#chat form
-{
-	display: flex;
-	flex-direction: horizontal;
-	justify-content: space-between;
-	height: 7%;
-	box-shadow: 0 -1.3em 1em -0.5em var( --cBackground );
-	border-top: 1px solid rgba(89, 168, 15, 0.8);
+/* Scrollbar */
+
+#chat-section {
+	scrollbar-color: var(--cNeon50) var(--cBackground);
 }
 
-#chat form input:nth-child(1)
-{
-	background-color: var( --cBackground );
-	color: var( --cNeonLight );
-	width: 100%;
-/*	height: 30px;*/
-	padding-left: 2em;
-	padding-right: 2em;
-	border:none;
-	outline:none;
-	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
-	font-size: 0.8em;
-	letter-spacing: 0.2em;
-	line-height: 1.8;
-	font-weight:700;
+#chat-section *::-webkit-scrollbar {
+	width: 0.5em;
 }
 
-#chat form input:nth-child(2)
-{
-	cursor: pointer;
-	background-color: var( --cBackground );
-	color: var( --cNeon );
-	width: 15%;
-	border:none;
-	border-left: 1px solid var( --cNeon );
-	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
+#chat-section *::-webkit-scrollbar-track {
+	background: var(--cBackground);
 }
 
-#chat form input:nth-child(2):hover
-{
-	background-color: rgba(89, 168, 15, 0.8);
-	color: var( --cBackground );
+#chat-section *::-webkit-scrollbar-thumb {
+	background: var(--cNeon50);
 }
 
-#channels
-{
-
-	width: 25%;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-
-	padding-top:1%;
-	padding-bottom:1%;
-	padding-left:2%;
-	padding-right:2%;
-	border-radius: 1px;
-	height: 50%;
-
+#chat-section *::-webkit-scrollbar-thumb:hover {
+	background: var(--cNeon30);
 }
-
-#channels li
-{
-	color: var( --cNeon );
-	font-family: SkwarLetter, SkwarNumber, SkwarPunc, SkwarSym;
-	font-weight: 250;
-	margin-bottom: 0.5em;
-	list-style-type: square;
-	cursor: pointer;
-}
-
-#friends li:hover, #members li:hover, #channels li:hover
-{
-	color: var( --cBackground );
-	background-color: var( --cNeon );
-}
-
-ul
-{
-	overflow-y: scroll;
-	width:90%;
-	height:100%;
-	scrollbar-width:none;
-}
-
-ul::-webkit-scrollbar {
-	display:none;
-}
-	
-li
-{
-	overflow-wrap: anywhere;
-	width:90%;
-}
-
-@media only screen and ( min-width: 1220px )
-{
-	#chatSection{ margin-top: 50px; }
-}
-
-
-/* Temp Message css */
-
-
-
