--- a/frontapi/src/components/navbar/navbar.css
+++ b/frontapi/src/components/navbar/navbar.css
@@ -48,13 +48,14 @@
 	stroke: var( --cNeonDark );
 	stroke-width: 4;
 }
-#iconGame:focus, #iconGame:hover{
+#iconGame:focus, #iconGame:hover, #iconGame.sameRoute {
 	filter: drop-shadow(0px 0px 3px var( --cNeon ) );
 }
-#iconGame:focus text, #iconGame:focus circle, #iconGame:hover text, #iconGame:hover circle {
+#iconGame:focus text, #iconGame:focus circle, #iconGame:hover text, #iconGame:hover circle,
+#iconGame.sameRoute text, #iconGame.sameRoute circle {
 	fill: var( --cNeon );
 }
-#iconGame:focus line, #iconGame:hover line {
+#iconGame:focus line, #iconGame:hover line, #iconGame.sameRoute line {
 	stroke: var( --cNeon );
 	stroke-width: 4;
 }
@@ -65,10 +66,10 @@
 #iconLeaderboard {
 	filter: drop-shadow(0px 0px 0px var( --cNeonDark ) );
 }
-#iconLeaderboard:hover, #iconLeaderboard:focus {
+#iconLeaderboard:hover, #iconLeaderboard:focus, #iconLeaderboard.sameRoute {
 	filter: drop-shadow(0px 0px 4px var( --cNeon ) );
 }
-#iconLeaderboard:hover path, #iconLeaderboard:focus path {
+#iconLeaderboard:hover path, #iconLeaderboard:focus path, #iconLeaderboard.sameRoute path {
 	fill: var( --cNeon );
 }
 
@@ -81,11 +82,12 @@
 #iconChat rect {
 	fill: var( --cNeonDark );
 }
-#iconChat:hover, #iconChat:focus {
+#iconChat:hover, #iconChat:focus, #iconChat.sameRoute {
 	filter: drop-shadow(0px 0px 4px var( --cNeon ) );
 }
 #iconChat:hover rect, #iconChat:focus rect,
-#iconChat:hover path, #iconChat:focus path {
+#iconChat:hover path, #iconChat:focus path,
+#iconChat.sameRoute rect, #iconChat.sameRoute path {
 	fill: var( --cNeon );
 }
 
@@ -96,10 +98,10 @@
 {
 	filter: drop-shadow(0px 0px 0px var( --cNeonDark ) );
 }
-#iconUser:hover, #iconUser:focus {
+#iconUser:hover, #iconUser:focus, #iconUser.sameRoute {
 	filter: drop-shadow(0px 0px 4px var( --cNeon ) );
 }
-#iconUser:hover path, #iconUser:focus path {
+#iconUser:hover path, #iconUser:focus path, #iconUser.sameRoute path {
 	fill: var( --cNeon );
 }
 
@@ -120,6 +122,7 @@
 
 
 /* NavText */
+
 #navbarText
 {
 	margin-top: 80px;
@@ -130,14 +133,9 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-
-	/*
-	border-style: solid;
-	border-color: blue;
-	border-width: 1px;
-	*/
-
 }
+
+
 
 #navbarText *
 {
@@ -146,23 +144,30 @@
 	background-color: var( --cBackground );
 	padding: 0.7rem 0.7rem 1rem 1rem;
 
-	color: var( --cNeonDark );
+/*	color: var( --cNeonDark );*/
 	font-size: 1.5rem;	
 	font-family: Skwar;
 	font-weight: 450;
-	/*
-	text-shadow:
-		0 0 0.1em #ffffff,
-		0 0 0.5em var( --cNeon );
-		*/
 
 	border: var( --cNeonDark ) 0.1em solid;
 	border-radius: 0.2em;
-	/*
-	box-shadow:
-		inset 0 0 0.5em var( --cNeon ),
-		0 0 0.5em var( --cNeon );
-		*/
+}
+
+#navbarText .otherRoute
+{
+	color: var( --cNeonDark );
+}
+
+#navbarText .sameRoute
+{
+	color: var( --cNeon );
+    border: var( --cNeon ) 0.1em solid;
+    text-shadow:
+        0 0 0.1em #ffffff,
+        0 0 0.5em var( --cNeon );
+    box-shadow:
+        inset 0 0 0.5em var( --cNeon ),
+        0 0 0.5em var( --cNeon );
 }
 
 #navbarText *:hover{
@@ -179,7 +184,7 @@
 }
 
 
-#navbarText *:focus
+#navbarText .otherRoute:focus
 {
 	color: var( --cNeon );
 	border: var( --cNeon ) 0.1em solid;
